src/objects/Astrum_Doc__c.object
<CustomObject>
    <fields>
        <fullName>Bin__c</fullName>
        <description>Astrum PM Bin</description>
        <label>Bin</label>
        <picklist>
            <picklistValues>
                <fullName>Kickoff Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Conduit Run and Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Prep Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Notice to Construct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA Submitted Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice at Start of Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Equip. Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel and Inverter Serial Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Warranty Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Comm. Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Subst. Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Final Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Completion Forms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Bin__c</controllingField>
            <picklistValues>
                <fullName>3 Line diagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Application Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Detail Photos: Clearance, Pitch, Clamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB Panel, Interconnect, Disconnect Box Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning and Production Verification Checklists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit (Roof, Interior, Exterior) Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit Run and Layout - Customer Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Materials Photo (NRG only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Drawings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Permit Design Package</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Key_Date__c</fullName>
        <label>Document Key Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsNote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_Text__c</fullName>
        <label>Note Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document is linked to an Astrum PM project</description>
        <label>PM Project</label>
        <referenceTo>PM_Project__c</referenceTo>
        <relationshipLabel>Astrum Docs</relationshipLabel>
        <relationshipName>Astrum_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Astrum Doc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Astrum Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>